force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <inlineHelpText>Please select one of course name</inlineHelpText>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Sc computers</fullName>
            </value>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>BBM</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>