force-app/main/default/objects/Student__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <inlineHelpText>Enter course fee</inlineHelpText>
    <label>Course Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>