force-app/main/default/objects/Student__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <inlineHelpText>Please enter DOB with time</inlineHelpText>
    <label>DOB</label>
    <type>DateTime</type>
</CustomField>