force-app/main/default/objects/Student__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>Please enter student full name</inlineHelpText>
    <label>Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>