force-app/main/default/objects/Student__c/recordTypes/Management.recordType-meta.xml
<RecordType>
    <fullName>Management</fullName>
    <active>true</active>
    <description>mgmt seats</description>
    <label>Management</label>
</RecordType>