force-app/main/default/objects/Student__c/validationRules/Course_fee_less_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_fee_less_than_100</fullName>
    <active>false</active>
    <errorConditionFormula>Course_Fee__c &lt; 100</errorConditionFormula>
    <errorMessage>Course fee should not be less than 100 $</errorMessage>
</ValidationRule>